# agent-orchestration

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  EXAMPLE_E2E_VERBOSE_USAGE.md  LICENSE.md  MIND_MAP.md  README.md  TODO.md  arch.md  commit_message.md  debug_loop_issue.py  debug_minimal_loop.py  debug_mock_issue.py  debug_stdin.py  debug_stdin_simple.py  debug_test_failure.py  debug_trace_encode.py  fix_plan.md  iter_1.txt  loop.sh  mock_llm_agent.py  once.sh  orchestrate  postmortem.md  pyproject.toml  review.md  run_e2e_interactive.py  run_e2e_verbose.py  run_tests.py  scratch  spec.md  test_at73_debug.py  test_wait.yaml
docs/: architecture_overview.md  capability_status_matrix.md  ci-e2e.md  documentation_conventions.md  gmail_app_password_headless_monitor.md  index.md  lisp_workflow_drafting_guide.md  orchestration_start_here.md  ralph-wiggum-software-engineer.md  runtime_execution_lifecycle.md  steering.md  work_definition_model.md  workflow_drafting_guide.md  workflow_lisp_g6_verification_gate.json  workflow_lisp_mvp_comparison.md  workflow_lisp_route_readiness_registry.json  workflow_monitoring.md  workflow_prompt_map.md  workflow_yaml_estate_triage.md  workflow_yaml_orc_gap_list.md
orchestrator/: __init__.py  __main__.py  exceptions.py  loader.py  runtime_observability.py  state.py  state_locking.py
orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
prompts/: README.md  generic_implement.md  ralph_orchestrator_FIX_PROMPT.md  ralph_orchestrator_PLAN_PROMPT.md  ralph_orchestrator_PROMPT.md  ralph_simulation.md  ralph_simulation_metaprompt.md  repo_hygiene_review.md
scripts/: provider_prompt_dependency_broad_gate.py  (+5 more)
(+2262 files in other folders)
