[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestrator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.6.0",
    "pre-commit>=3.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator*"]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests that may require network or secrets; skipped by default",
    "requires_secrets: tests that require secrets; must skip when secrets are absent",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
